# assistant-proxy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/assistant_proxy/: proxy.py
